Source/WebCore/platform/ios/WebVideoFullscreenControllerAVKit.mm
@@ -149,8 +149,8 @@ private:
     void beginScanningForward() override;
     void beginScanningBackward() override;
     void endScanning() override;
-    void setDefaultPlaybackRate(float) override;
-    void setPlaybackRate(float) override;
+    void setDefaultPlaybackRate(double) override;
+    void setPlaybackRate(double) override;
     void selectAudioMediaOption(uint64_t) override;
     void selectLegibleMediaOption(uint64_t) override;
     double duration() const override;
@@ -158,9 +158,10 @@ private:
     double currentTime() const override;
     double bufferedTime() const override;
     bool isPlaying() const override;
+    bool isStalled() const override;
     bool isScrubbing() const override { return false; }
-    float defaultPlaybackRate() const override;
-    float playbackRate() const override;
+    double defaultPlaybackRate() const override;
+    double playbackRate() const override;
     Ref<TimeRanges> seekableRanges() const override;
     double seekableTimeRangesLastModifiedTime() const override;
     double liveUpdateInterval() const override;
@@ -183,7 +184,7 @@ private:
     void durationChanged(double) override;
     void currentTimeChanged(double currentTime, double anchorTime) override;
     void bufferedTimeChanged(double) override;
-    void rateChanged(bool isPlaying, float playbackRate, float defaultPlaybackRate) override;
+    void rateChanged(OptionSet<PlaybackSessionModel::PlaybackState>, double playbackRate, double defaultPlaybackRate) override;
     void seekableRangesChanged(const TimeRanges&, double lastModifiedTime, double liveUpdateInterval) override;
     void canPlayFastReverseChanged(bool) override;
     void audioMediaSelectionOptionsChanged(const Vector<MediaSelectionOption>& options, uint64_t selectedIndex) override;
@@ -416,17 +417,17 @@ void VideoFullscreenControllerContext::bufferedTimeChanged(double bufferedTime)
         client->bufferedTimeChanged(bufferedTime);
 }
 
-void VideoFullscreenControllerContext::rateChanged(bool isPlaying, float playbackRate, float defaultPlaybackRate)
+void VideoFullscreenControllerContext::rateChanged(OptionSet<PlaybackSessionModel::PlaybackState> playbackState, double playbackRate, double defaultPlaybackRate)
 {
     if (WebThreadIsCurrent()) {
-        RunLoop::main().dispatch([protectedThis = makeRefPtr(this), isPlaying, playbackRate, defaultPlaybackRate] {
-            protectedThis->rateChanged(isPlaying, playbackRate, defaultPlaybackRate);
+        RunLoop::main().dispatch([protectedThis = makeRefPtr(this), playbackState, playbackRate, defaultPlaybackRate] {
+            protectedThis->rateChanged(playbackState, playbackRate, defaultPlaybackRate);
         });
         return;
     }
 
     for (auto& client : m_playbackClients)
-        client->rateChanged(isPlaying, playbackRate, defaultPlaybackRate);
+        client->rateChanged(playbackState, playbackRate, defaultPlaybackRate);
 }
 
 void VideoFullscreenControllerContext::hasVideoChanged(bool hasVideo)
@@ -841,7 +842,7 @@ void VideoFullscreenControllerContext::endScanning()
     });
 }
 
-void VideoFullscreenControllerContext::setDefaultPlaybackRate(float defaultPlaybackRate)
+void VideoFullscreenControllerContext::setDefaultPlaybackRate(double defaultPlaybackRate)
 {
     ASSERT(isUIThread());
     WebThreadRun([protectedThis = makeRefPtr(this), this, defaultPlaybackRate] {
@@ -850,7 +851,7 @@ void VideoFullscreenControllerContext::setDefaultPlaybackRate(float defaultPlayb
     });
 }
 
-void VideoFullscreenControllerContext::setPlaybackRate(float playbackRate)
+void VideoFullscreenControllerContext::setPlaybackRate(double playbackRate)
 {
     ASSERT(isUIThread());
     WebThreadRun([protectedThis = makeRefPtr(this), this, playbackRate] {
@@ -901,13 +902,19 @@ bool VideoFullscreenControllerContext::isPlaying() const
     return m_playbackModel ? m_playbackModel->isPlaying() : false;
 }
 
-float VideoFullscreenControllerContext::defaultPlaybackRate() const
+bool VideoFullscreenControllerContext::isStalled() const
+{
+    ASSERT(isUIThread());
+    return m_playbackModel ? m_playbackModel->isStalled() : false;
+}
+
+double VideoFullscreenControllerContext::defaultPlaybackRate() const
 {
     ASSERT(isUIThread());
     return m_playbackModel ? m_playbackModel->defaultPlaybackRate() : 0;
 }
 
-float VideoFullscreenControllerContext::playbackRate() const
+double VideoFullscreenControllerContext::playbackRate() const
 {
     ASSERT(isUIThread());
     return m_playbackModel ? m_playbackModel->playbackRate() : 0;
