Source/WebKit/UIProcess/Cocoa/PlaybackSessionManagerProxy.mm
@@ -121,13 +121,13 @@ void PlaybackSessionModelContext::endScanning()
         m_manager->endScanning(m_contextId);
 }
 
-void PlaybackSessionModelContext::setDefaultPlaybackRate(float defaultPlaybackRate)
+void PlaybackSessionModelContext::setDefaultPlaybackRate(double defaultPlaybackRate)
 {
     if (m_manager)
         m_manager->setDefaultPlaybackRate(m_contextId, defaultPlaybackRate);
 }
 
-void PlaybackSessionModelContext::setPlaybackRate(float playbackRate)
+void PlaybackSessionModelContext::setPlaybackRate(double playbackRate)
 {
     if (m_manager)
         m_manager->setPlaybackRate(m_contextId, playbackRate);
@@ -206,13 +206,13 @@ void PlaybackSessionModelContext::bufferedTimeChanged(double bufferedTime)
         client->bufferedTimeChanged(bufferedTime);
 }
 
-void PlaybackSessionModelContext::rateChanged(bool isPlaying, float playbackRate, float defaultPlaybackRate)
+void PlaybackSessionModelContext::rateChanged(OptionSet<WebCore::PlaybackSessionModel::PlaybackState> playbackState, double playbackRate, double defaultPlaybackRate)
 {
-    m_isPlaying = isPlaying;
+    m_playbackState = playbackState;
     m_playbackRate = playbackRate;
     m_defaultPlaybackRate = defaultPlaybackRate;
     for (auto* client : m_clients)
-        client->rateChanged(m_isPlaying, m_playbackRate, m_defaultPlaybackRate);
+        client->rateChanged(m_playbackState, m_playbackRate, m_defaultPlaybackRate);
 }
 
 void PlaybackSessionModelContext::seekableRangesChanged(WebCore::TimeRanges& seekableRanges, double lastModifiedTime, double liveUpdateInterval)
@@ -489,9 +489,9 @@ void PlaybackSessionManagerProxy::playbackStartedTimeChanged(PlaybackSessionCont
     ensureModel(contextId).playbackStartedTimeChanged(playbackStartedTime);
 }
 
-void PlaybackSessionManagerProxy::rateChanged(PlaybackSessionContextIdentifier contextId, bool isPlaying, double rate, double defaultPlaybackRate)
+void PlaybackSessionManagerProxy::rateChanged(PlaybackSessionContextIdentifier contextId, OptionSet<WebCore::PlaybackSessionModel::PlaybackState> playbackState, double rate, double defaultPlaybackRate)
 {
-    ensureModel(contextId).rateChanged(isPlaying, rate, defaultPlaybackRate);
+    ensureModel(contextId).rateChanged(playbackState, rate, defaultPlaybackRate);
 }
 
 void PlaybackSessionManagerProxy::pictureInPictureSupportedChanged(PlaybackSessionContextIdentifier contextId, bool supported)
@@ -563,12 +563,12 @@ void PlaybackSessionManagerProxy::endScanning(PlaybackSessionContextIdentifier c
     m_page->send(Messages::PlaybackSessionManager::EndScanning(contextId));
 }
 
-void PlaybackSessionManagerProxy::setDefaultPlaybackRate(PlaybackSessionContextIdentifier contextId, float defaultPlaybackRate)
+void PlaybackSessionManagerProxy::setDefaultPlaybackRate(PlaybackSessionContextIdentifier contextId, double defaultPlaybackRate)
 {
     m_page->send(Messages::PlaybackSessionManager::SetDefaultPlaybackRate(contextId, defaultPlaybackRate));
 }
 
-void PlaybackSessionManagerProxy::setPlaybackRate(PlaybackSessionContextIdentifier contextId, float playbackRate)
+void PlaybackSessionManagerProxy::setPlaybackRate(PlaybackSessionContextIdentifier contextId, double playbackRate)
 {
     m_page->send(Messages::PlaybackSessionManager::SetPlaybackRate(contextId, playbackRate));
 }
